feat: 补全所有空壳节点为真实可用功能
- Node 01: 添加 Claude API 支持
- Node 08: HTTP 客户端 (requests)
- Node 12: PostgreSQL 数据库操作
- Node 14: FFmpeg 音视频处理
- Node 15: OCR 文字识别 (EasyOCR/Tesseract)
- Node 16: 邮件发送 (SMTP)
- Node 17: EdgeTTS 文字转语音
- Node 18: DeepL/Google 翻译
- Node 19: 加密工具 (hash/encrypt/decrypt)
- Node 20: Qdrant 向量数据库
- Node 25: Google 搜索 (Serper/CSE)
- Node 36: Windows UI 自动化 (pyautogui/pywinauto)
- Node 39: SSH 远程执行
- Node 40: SFTP 文件传输
- Node 41: MQTT 消息队列
- Node 50: 真实 NLU (调用 LLM)
- Node 72: RAG 知识库 (ChromaDB/内存)
- Node 73: 自主学习系统
- Node 74: 数字孪生

所有节点现在都有真实的功能实现，不再是空壳。
部分功能需要安装对应依赖库才能使用。

--- a/.env.example
+++ b/.env.example
@@ -1,51 +1,90 @@
-# UFO³ Galaxy 环境变量配置模板
+# UFO³ Galaxy 系统环境变量配置
 # 复制此文件为 .env 并填入您的 API Keys
 
-# ============================================================================
-# LLM API Keys (用于 Node 01 OneAPI)
-# ============================================================================
-OPENAI_API_KEY=your_openai_api_key_here
-ZHIPU_API_KEY=your_zhipu_api_key_here
-TOGETHER_API_KEY=your_together_api_key_here
-OPENROUTER_API_KEY=your_openrouter_api_key_here
-GROQ_API_KEY=your_groq_api_key_here
-GEMINI_API_KEY=your_gemini_api_key_here
-SILICON_FLOW_API_KEY=your_silicon_flow_api_key_here
+# ============ LLM API Keys ============
+# OpenRouter (推荐，支持多种模型)
+OPENROUTER_API_KEY=sk-or-v1-xxx
 
-# ============================================================================
-# 第三方服务 API Keys
-# ============================================================================
-GITHUB_TOKEN=your_github_token_here
-NOTION_API_KEY=your_notion_api_key_here
-SLACK_TOKEN=your_slack_token_here
-BRAVE_API_KEY=your_brave_api_key_here
-OPENWEATHER_API_KEY=your_openweather_api_key_here
+# 智谱 AI (中文效果好)
+ZHIPU_API_KEY=xxx.xxx
 
-# ============================================================================
-# 视频生成 API
-# ============================================================================
-PIXVERSE_API_KEY=your_pixverse_api_key_here
+# Groq (速度快)
+GROQ_API_KEY=gsk_xxx
 
-# ============================================================================
-# 量子计算 API
-# ============================================================================
-IBM_QUANTUM_TOKEN=your_ibm_quantum_token_here
+# Claude (Anthropic)
+CLAUDE_API_KEY=sk-ant-api03-xxx
 
-# ============================================================================
-# 3D 打印 (可选)
-# ============================================================================
-BAMBU_LAB_IP=your_bambu_lab_ip_here
-BAMBU_LAB_ACCESS_CODE=your_bambu_lab_access_code_here
-BAMBU_LAB_SERIAL=your_bambu_lab_serial_here
+# OpenAI
+OPENAI_API_KEY=sk-xxx
 
-# ============================================================================
-# 网络配置
-# ============================================================================
-TAILSCALE_WINDOWS_IP=100.123.215.126
-TAILSCALE_CLOUD_IP=100.82.168.58
+# Gemini
+GEMINI_API_KEY=AIzaSyxxx
 
-# ============================================================================
-# OneAPI 配置
-# ============================================================================
-ONEAPI_BASE_URL=http://100.123.215.126:3000/v1
-ONEAPI_API_KEY=your_oneapi_key_here
+# 硅基流动
+SILICONFLOW_API_KEY=sk-xxx
+
+# Together AI
+TOGETHER_API_KEY=tgp_v1_xxx
+
+# ============ 工具 API Keys ============
+# OpenWeather (天气)
+OPENWEATHER_API_KEY=xxx
+
+# BraveSearch (搜索)
+BRAVE_API_KEY=BSAxxx
+
+# GitHub
+GITHUB_TOKEN=github_pat_xxx
+
+# Notion
+NOTION_API_KEY=ntn_xxx
+
+# Slack
+SLACK_BOT_TOKEN=xoxb-xxx
+
+# PixVerse (视频生成)
+PIXVERSE_API_KEY=sk-xxx
+
+# IBM Quantum
+IBM_QUANTUM_TOKEN=xxx
+
+# DeepL (翻译)
+DEEPL_API_KEY=xxx
+
+# Google Search
+GOOGLE_API_KEY=xxx
+GOOGLE_CSE_ID=xxx
+SERPER_API_KEY=xxx
+
+# ============ 数据库配置 ============
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASS=
+
+# Qdrant (向量数据库)
+QDRANT_URL=http://localhost:6333
+
+# ============ 消息队列 ============
+MQTT_BROKER=localhost
+MQTT_PORT=1883
+MQTT_USER=
+MQTT_PASS=
+
+# ============ 邮件配置 ============
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASS=
+
+# ============ 网络配置 ============
+# Windows PC Tailscale IP
+WINDOWS_TAILSCALE_IP=100.123.215.126
+
+# 华为云 Tailscale IP
+HUAWEI_CLOUD_IP=100.82.168.58
+
+# OneAPI 本地网关
+ONEAPI_BASE_URL=http://localhost:8001/v1
+ONEAPI_API_KEY=
