📝 完整 API 配置指南
新增/更新:
- .env.example: 添加所有 API 提供商配置模板
- API_CONFIGURATION_GUIDE.md: 完整的 API 配置和使用指南

支持的 API 提供商 (10个):
1. Groq (免费，超快)
2. Together AI (低成本)
3. 智谱 AI (中文优秀)
4. Perplexity (实时搜索)
5. OpenRouter (聚合平台)
6. Claude (最强推理)
7. 本地 LLM (零成本)
8. Brave Search (免费搜索)
9. OpenWeather (免费天气)
10. Pixverse (视频生成)

智能路由策略: cost_optimized
预计成本节省: 78-87%

状态: ✅ 配置指南完成

--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,19 @@
 
 # ============ LLM API Keys ============
 # OpenRouter (推荐，支持多种模型)
+# 获取: https://openrouter.ai
 OPENROUTER_API_KEY=sk-or-v1-xxx
 
 # 智谱 AI (中文效果好)
+# 获取: https://open.bigmodel.cn
 ZHIPU_API_KEY=xxx.xxx
 
-# Groq (速度快)
+# Groq (速度快，免费)
+# 获取: https://console.groq.com
 GROQ_API_KEY=gsk_xxx
 
-# Claude (Anthropic)
+# Claude (Anthropic，最强推理)
+# 获取: https://console.anthropic.com
 CLAUDE_API_KEY=sk-ant-api03-xxx
 
 # OpenAI
@@ -23,14 +27,21 @@ GEMINI_API_KEY=AIzaSyxxx
 # 硅基流动
 SILICONFLOW_API_KEY=sk-xxx
 
-# Together AI
+# Together AI (低成本)
+# 获取: https://api.together.xyz
 TOGETHER_API_KEY=tgp_v1_xxx
 
+# Perplexity (实时搜索)
+# 获取: https://www.perplexity.ai/settings/api
+PERPLEXITY_API_KEY=pplx-xxx
+
 # ============ 工具 API Keys ============
-# OpenWeather (天气)
+# OpenWeather (天气，免费)
+# 获取: https://openweathermap.org/api
 OPENWEATHER_API_KEY=xxx
 
-# BraveSearch (搜索)
+# BraveSearch (搜索，免费)
+# 获取: https://brave.com/search/api/
 BRAVE_API_KEY=BSAxxx
 
 # GitHub
@@ -43,6 +54,7 @@ NOTION_API_KEY=ntn_xxx
 SLACK_BOT_TOKEN=xoxb-xxx
 
 # PixVerse (视频生成)
+# 获取: https://pixverse.ai
 PIXVERSE_API_KEY=sk-xxx
 
 # IBM Quantum
