🔧 更新 .env.example 配置模板
更新内容:
- 添加所有 10 个 API 提供商的配置项
- 包含详细的获取地址和说明
- 添加可选配置项（GitHub, Notion, PostgreSQL 等）
- 完善系统配置和网络配置

重要说明:
- 只包含占位符，不包含真实 Keys
- 符合 GitHub 安全策略
- 用户需复制为 .env 并填入真实 Keys

状态: ✅ 安全推送

--- a/.env.example
+++ b/.env.example
@@ -1,96 +1,136 @@
-# UFO³ Galaxy 系统环境变量配置
-# 复制此文件为 .env 并填入您的 API Keys
+# UFO³ Galaxy v2.0 - API 配置模板
+# 复制此文件为 .env 并填入您的真实 API Keys
 
-# ============ LLM API Keys ============
-# OpenRouter (推荐，支持多种模型)
-# 获取: https://openrouter.ai
-OPENROUTER_API_KEY=sk-or-v1-xxx
+# ============================================
+# 核心 LLM API (10个提供商)
+# ============================================
 
-# 智谱 AI (中文效果好)
-# 获取: https://open.bigmodel.cn
-ZHIPU_API_KEY=xxx.xxx
+# 1. Groq (免费，超快速度)
+# 获取地址: https://console.groq.com/keys
+GROQ_API_KEY=your_groq_api_key_here
+GROQ_API_BASE=https://api.groq.com/openai/v1
 
-# Groq (速度快，免费)
-# 获取: https://console.groq.com
-GROQ_API_KEY=gsk_xxx
+# 2. Together AI (低成本)
+# 获取地址: https://api.together.xyz/settings/api-keys
+TOGETHER_API_KEY=your_together_api_key_here
+TOGETHER_API_BASE=https://api.together.xyz/v1
 
-# Claude (Anthropic，最强推理)
-# 获取: https://console.anthropic.com
-CLAUDE_API_KEY=sk-ant-api03-xxx
+# 3. 智谱 AI (中文优秀)
+# 获取地址: https://open.bigmodel.cn/usercenter/apikeys
+ZHIPU_API_KEY=your_zhipu_api_key_here
+ZHIPU_API_BASE=https://open.bigmodel.cn/api/paas/v4
 
-# OpenAI
-OPENAI_API_KEY=sk-xxx
+# 4. Perplexity (实时搜索)
+# 获取地址: https://www.perplexity.ai/settings/api
+PERPLEXITY_API_KEY=your_perplexity_api_key_here
+PERPLEXITY_API_BASE=https://api.perplexity.ai
 
-# Gemini
-GEMINI_API_KEY=AIzaSyxxx
+# 5. OpenRouter (聚合平台)
+# 获取地址: https://openrouter.ai/keys
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+OPENROUTER_API_BASE=https://openrouter.ai/api/v1
 
-# 硅基流动
-SILICONFLOW_API_KEY=sk-xxx
+# 6. Claude (最强推理)
+# 获取地址: https://console.anthropic.com/settings/keys
+CLAUDE_API_KEY=your_claude_api_key_here
+CLAUDE_API_BASE=https://api.anthropic.com
 
-# Together AI (低成本)
-# 获取: https://api.together.xyz
-TOGETHER_API_KEY=tgp_v1_xxx
+# 7. OpenAI (可选)
+# 获取地址: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_API_BASE=https://api.openai.com/v1
 
-# Perplexity (实时搜索)
-# 获取: https://www.perplexity.ai/settings/api
-PERPLEXITY_API_KEY=pplx-xxx
+# 8. Gemini (可选)
+# 获取地址: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# ============ 工具 API Keys ============
-# OpenWeather (天气，免费)
-# 获取: https://openweathermap.org/api
-OPENWEATHER_API_KEY=xxx
+# 9. 硅基流动 (可选)
+# 获取地址: https://cloud.siliconflow.cn
+SILICONFLOW_API_KEY=your_siliconflow_api_key_here
 
-# BraveSearch (搜索，免费)
-# 获取: https://brave.com/search/api/
-BRAVE_API_KEY=BSAxxx
+# 10. 本地 LLM (Ollama)
+# 安装地址: https://ollama.com/download
+LOCAL_LLM_ENABLED=true
+LOCAL_LLM_URL=http://localhost:11434
 
-# GitHub
-GITHUB_TOKEN=github_pat_xxx
+# ============================================
+# 工具 API (5个)
+# ============================================
 
-# Notion
-NOTION_API_KEY=ntn_xxx
+# 1. Brave Search (实时搜索，免费)
+# 获取地址: https://brave.com/search/api/
+BRAVE_API_KEY=your_brave_api_key_here
+BRAVE_API_BASE=https://api.search.brave.com/res/v1
 
-# Slack
-SLACK_BOT_TOKEN=xoxb-xxx
+# 2. OpenWeather (天气查询，免费)
+# 获取地址: https://home.openweathermap.org/api_keys
+OPENWEATHER_API_KEY=your_openweather_api_key_here
+OPENWEATHER_API_BASE=https://api.openweathermap.org/data/2.5
 
-# PixVerse (视频生成)
-# 获取: https://pixverse.ai
-PIXVERSE_API_KEY=sk-xxx
+# 3. Pixverse (视频生成)
+# 获取地址: https://pixverse.ai/api
+PIXVERSE_API_KEY=your_pixverse_api_key_here
+PIXVERSE_API_BASE=https://api.pixverse.ai/v1
 
-# IBM Quantum
-IBM_QUANTUM_TOKEN=xxx
+# 4. GitHub (可选)
+# 获取地址: https://github.com/settings/tokens
+GITHUB_TOKEN=your_github_token_here
 
-# DeepL (翻译)
-DEEPL_API_KEY=xxx
+# 5. Notion (可选)
+# 获取地址: https://www.notion.so/my-integrations
+NOTION_API_KEY=your_notion_api_key_here
 
-# Google Search
-GOOGLE_API_KEY=xxx
-GOOGLE_CSE_ID=xxx
-SERPER_API_KEY=xxx
+# ============================================
+# 数据库配置
+# ============================================
 
-# ============ 数据库配置 ============
+# Redis (短期记忆)
+REDIS_URL=redis://localhost:6379
+
+# Memos (长期记忆)
+MEMOS_URL=http://localhost:5230
+MEMOS_TOKEN=
+
+# SQLite (默认)
+SQLITE_PATH=./data/ufo_galaxy.db
+
+# PostgreSQL (可选)
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASS=
 
-# Qdrant (向量数据库)
+# Qdrant (向量数据库，可选)
 QDRANT_URL=http://localhost:6333
 
-# ============ 消息队列 ============
-MQTT_BROKER=localhost
-MQTT_PORT=1883
-MQTT_USER=
-MQTT_PASS=
+# ============================================
+# 系统配置
+# ============================================
 
-# ============ 邮件配置 ============
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=
-SMTP_PASS=
+# Galaxy Gateway
+GATEWAY_HOST=0.0.0.0
+GATEWAY_PORT=8888
 
-# ============ 网络配置 ============
+# One-API
+ONE_API_HOST=0.0.0.0
+ONE_API_PORT=8001
+
+# Dashboard
+DASHBOARD_HOST=0.0.0.0
+DASHBOARD_PORT=8000
+
+# 日志级别
+LOG_LEVEL=INFO
+
+# 智能路由策略
+# 选项: local_first, cloud_first, cost_optimized, quality_first
+ROUTING_STRATEGY=cost_optimized
+
+# ============================================
+# 网络配置 (可选)
+# ============================================
+
 # Windows PC Tailscale IP
 WINDOWS_TAILSCALE_IP=100.123.215.126
 
@@ -100,3 +140,21 @@ HUAWEI_CLOUD_IP=100.82.168.58
 # OneAPI 本地网关
 ONEAPI_BASE_URL=http://localhost:8001/v1
 ONEAPI_API_KEY=
+
+# ============================================
+# 消息队列 (可选)
+# ============================================
+
+MQTT_BROKER=localhost
+MQTT_PORT=1883
+MQTT_USER=
+MQTT_PASS=
+
+# ============================================
+# 邮件配置 (可选)
+# ============================================
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASS=
