--- a/galaxy_gateway/requirements.txt
+++ b/galaxy_gateway/requirements.txt
@@ -5,10 +5,6 @@ pydantic>=2.5.0
 
 # HTTP Client
 httpx>=0.25.0
-aiohttp>=3.9.0
 
-# AI/LLM Integration
+# AI/LLM Integration (if needed by nodes)
 openai>=2.0.0
-
-# Async Support
-asyncio-mqtt>=0.16.0
